# tree

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: main.c
